syntax = "proto3";

option java_package = "com.xuexiang.springbootgrpc";

package XHttp;

service APIService {
    //登陆请求
    rpc login (LoginRequest) returns (LoginReply) {}

    //获取所有的用户信息
    rpc getAllUser(Empty) returns (UserList) {}

    //文件上传
    rpc uploadFileStream(stream FileInfo) returns (stream FilePath) {}
    //文件下载
    rpc downloadStream(stream FilePath) returns (stream FileInfo) {}

    //文件上传
    rpc uploadFile(FilePackage) returns (FilePathPackage) {}
    //文件下载
    rpc download(FilePathPackage) returns (FilePackage) {}

}

// 空请求，无参数
message Empty {

}


// 登陆请求
message LoginRequest {
    string loginName = 1;
    string password = 2;
}

// 登陆返回
message LoginReply {
    User user = 1;
    string token = 2;
}

// 用户信息
message User {
    int32 userId = 1;
    string loginName = 2;
    string password = 3;
    string name = 4;
    int32 gender = 5;
    int32 age = 6;
    string phone = 7;
}

// 用户信息集合
message UserList {
    repeated User users = 1;
}

// 文件信息
message FileInfo {
    string fileName = 1; //文件名
    uint64 size = 2; //文件大小
    bytes data = 3; //数据
}

message FilePath {
    string path = 1; //文件保存的路径
}

//文件包
message FilePackage {
    repeated FileInfo file = 1;
}

//文件路径包
message FilePathPackage {
    repeated string path = 1; //文件保存的路径
}